--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "name": "calendar-front",
   "version": "0.0.1",
+  "license": "SEE LICENSE IN LICENSE FILE",
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "lint": "npx eslint ./ --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
   "dependencies": {
     "@material-ui/core": "^4.9.1",
     "clsx": "^1.1.0",
@@ -9,9 +21,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "prettier": "^1.19.1"
   }
 }
