--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,16 @@
 {
-  "presets": ["next/babel"]
+  "presets": [
+    "next/babel"
+  ],
+  "plugins": [
+    [
+      "styled-components",
+      {
+        "ssr": true,
+        "displayName": true,
+        "minify": false,
+        "transpileTemplateLiterals": false
+      }
+    ]
+  ]
 }
