--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calendar-front",
+  "name": "nextjs-with-material-ui-styled-components-eslint-prettier-jest-boilerplate",
   "version": "0.0.1",
   "license": "SEE LICENSE IN LICENSE FILE",
   "scripts": {
@@ -22,8 +22,6 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.1",
-    "clsx": "^1.1.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "next": "^9.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -32,6 +30,7 @@
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.7",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-jest": "^23.7.0",
