Updsate project name and fix dependecies

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-with-material-ui-styled-components-eslint-prettier-jest-boilerplate",
+  "name": "nextjs-material-ui-boilerplate",
   "version": "0.0.1",
   "license": "SEE LICENSE IN LICENSE FILE",
   "scripts": {
@@ -25,6 +25,7 @@
     "next": "^9.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
