--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "license": "SEE LICENSE IN LICENSE FILE",
   "scripts": {
-    "dev": "next ./src",
-    "build": "next build ./src",
-    "start": "next start ./src",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
     "test": "npx jest ./src",
-    "lint": "npx eslint ./src --fix"
+    "lint": "npx eslint ./src ./pages --fix"
   },
   "husky": {
     "hooks": {
