--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-
     "babel-plugin-styled-components": "^1.10.7",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-babel-module": "^5.1.2",
     "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
